# nautica-api

./: .gitignore  README.md  main.py  nautica.config.json  nautica.config.toml  openapi.yaml  pyproject.toml  requirements.txt  wsclient.py
.github/workflows/: python-publish.yml
config/: nautica.toml
napi/: Require.py  __init__.py  http.py  ws.py
napi/http/: Require.py  __init__.py
nautica/: __init__.py  __main__.py  instances.py  shared.py
nautica/api/: __init__.py
nautica/api/http/: __init__.py  models.py  require.py  router.py
nautica/cli/: Create.py  Install.py  PackageManager.py  PackageManagerAuth.py  Run.py  __init__.py
nautica/ext/: PackageManager.py  PackageUtils.py  Path.py  Static.py  StatusCodes.py  Util.py  logging_patch.py  procedures.py  require_util.py  static.py  utils.py
nautica/manager/: __init__.py
nautica/manager/config/: __init__.py  builder.py  helper.py  preset.py
nautica/manager/logger/: __init__.py  levels.py  tableutil.py
nautica/manager/memory/: __init__.py
nautica/manager/scheduler/: __init__.py
nautica/models/: Http.py  HttpRequirements.py  Package.py  Requirements.py  Service.py  Shell.py  Websocket.py
nautica/runner/: __init__.py
nautica/runner/preprocessor/: __init__.py  models.py
nautica/servers/http/: __init__.py  builtins.py  require.py  requireutil.py  router.py
nautica/servers/ws/: __init__.py
nautica/services/: __init__.py
nautica/services/builtins/: __init__.py
nautica/services/builtins/http/: __init__.py  middleware.py  openapi.py  requirements.py  router.py  server.py
nautica/services/builtins/shell/: __init__.py  decorator.py
nautica/services/builtins/shell/commands/: basic.py
nautica/services/builtins/shell/gui/: __init__.py  autocomplete.py  css.py  themes.py
nautica/services/builtins/shell/gui/pages/: home.py
nautica/services/builtins/websocket/: __init__.py
nautica/services/config/: __init__.py  helper.py
nautica/services/database/: mongo.py  xeldb.py
nautica/services/eventer/: __init__.py  builtins.py
nautica/services/logger/: __init__.py  levels.py  tableutil.py
nautica/services/remoteaccess/: __init__.py  handlers.py
nautica/services/sessions/: __init__.py
nautica/services/shell/: __init__.py  shared.py
nautica/services/shell/commands/: basic.py  nman.py
project/config/: http.toml
src/assets/: example.config.json
src/routes/http/: example.py
src/routes/http/api/v1/: +root.py  test.py  test_b.py
src/routes/http/api/v2/: test_a.py
