[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautica"
version = "3.0.3"
description = "A service management framework"
license = {text = "MIT"}
authors = [
    {name = "Xellu", email = "xellu@catboys.cc"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "starlette",
    "uvicorn",
    "python-multipart",
    "colorama",
    "tomlkit",
    "click",
    "psutil",
    "textual",
    "pathspec",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautica*", "napi*"]

[project.scripts]
nautica = "nautica.__main__:cli"
napi = "nautica.__main__:cli"


[project.urls]
Homepage = "https://github.com/xellu/nautica-api"