[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautica"
version = "3.1.1"
description = "A service management framework"
license = {text = "MIT"}
authors = [
    {name = "Xellu", email = "xellu@catboys.cc"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "starlette",
    "uvicorn",
    "python-multipart",
    "colorama",
    "tomlkit",
    "click",
    "psutil",
    "textual",
    "pathspec",
    "requests",
    "packaging",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautica*", "napi*"]

[project.scripts]
nautica = "nautica.__main__:cli"
napi = "nautica.__main__:cli"


[project.urls]
Homepage = "https://github.com/xellu/nautica-api"