[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautica"
version = "3.2.2"
description = "A service management framework"
license = {text = "MIT"}
authors = [
    {name = "Xellu", email = "xellu@catboys.cc"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "starlette",
    "uvicorn",
    "python-multipart",
    "colorama",
    "tomlkit",
    "click",
    "psutil",
    "textual",
    "pathspec",
    "requests",
    "packaging",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautica*", "napi*"]

[project.scripts]
nautica = "nautica.__main__:cli"
napi = "nautica.__main__:cli"


[project.urls]
Homepage = "https://github.com/xellu/nautica-api"